@@ -1,3 +1,11 @@
+2006-11-29  OHASHI Akira  <bg66@koka-in.org>
+
+	* sb-mixi.el (shimbun-mixi): Add the COMMENT-CACHE slot.
+	(initialize-instance): New method.
+	(shimbun-mixi-get-headers): Cache the content of comment.
+	(shimbun-comment-article): Use cache.
+	(shimbun-article): Follow the change above.
+
 2006-11-28  OHASHI Akira  <bg66@koka-in.org>
 
 	* sb-mixi.el (shimbun-mixi-x-face-alist): New variable.
